--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "docx": "^8.5.0",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
@@ -39,5 +43,3 @@
     ]
   }
 }
-
-
